# Maximal-k-l--plex-Enumeration

./: .gitignore  CMakeLists.txt  README.md  algo_on_server.cc  base_on_server.cc  base_on_server.h  bf_on_server.cc
data/: .gitignore  hand_craft.txt  small_graph.txt
include/: base_on_server.h  utils.h  utils_copy.h
scripts/: run_all.py  run_exam.py  run_extra.py  small_gen.py  snap_modify.py
src/: adjacent_search.cc  adjacent_search_copy.cc  adjacent_search_opt.cc  algo2_on_server.cc  algo_on_server.cc  base_on_server.cc  bf2_on_server.cc  bf_enum.cc  bf_on_server.cc  bf_search.cc  utils.cc  utils_copy.cc
